# recently-used-kata

./: .gitignore  LICENSE  README.md  cabal.config  recently-used-kata.cabal
src/: RecentlyUsedList.hs
test/: RecentlyUsedListSpec.hs
