name:                recently-used-kata
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tomphp/recently-used-kata#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Oram
maintainer:          tom@codept.com
copyright:           2017, Tom Oram
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RecentlyUsedList
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite recently-used-kata-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , recently-used-kata
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tomphp/recently-used-kata
